--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"gulp-gh-pages": "^0.5.4",
 		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-html-beautify": "^1.0.1",
+		"gulp-htmlmin": "^5.0.1",
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
 		"gulp-plumber": "^1.2.1",
