--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-html-beautify": "^1.0.1",
 		"gulp-htmlmin": "^5.0.1",
+		"gulp-minify": "^3.1.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
 		"gulp-plumber": "^1.2.1",
@@ -39,6 +40,7 @@
 		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-uglify": "^3.0.2",
+		"gulp-uglify-es": "^3.0.0",
 		"postcss": "^8.4.16",
 		"prettier": "2.7.1"
 	},
