--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Start project.",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "gulp"
+		"start": "gulp",
+		"deploy": "gulp deploy"
 	},
 	"author": "El-dinero",
 	"license": "MIT",
