--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "gulp",
-		"deploy": "gulp deploy"
+		"build": "gulp deploy"
 	},
 	"author": "El-dinero",
 	"license": "MIT",
