--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"type": "git",
 		"url": ""
 	},
+	"homepage": "https://achukka.github.io/MASTER-TAO",
 	"devDependencies": {
 		"autoprefixer": "^10.4.8",
 		"browser-sync": "^2.27.10",
