--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install
         run: npm install
-      - name: npm run start
-        run: npm run start
+      - name: npm run build
+        run: npm run build
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
