--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Deploy Application
+name: github pages
 
 # Controls when the action will run.
 on:
@@ -10,7 +10,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  build-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,16 +22,33 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Checkout submodules
+      	shell: bash
+      		run: |
+        		auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        		git submodule sync --recursive
+        		git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+
+    	- name: Setup Hugo
+      	uses: peaceiris/actions-hugo@v2.4.13
+      	with:
+        	hugo-version: '0.83.1'
+        	extended: true
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - name: npm install
         run: npm install
+
       - name: npm run build
         run: npm run build
+
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+					allow_empty_commit: true
           publish_dir: ./build
+					publish_branch: gh-pages
