--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -25,8 +25,7 @@ jobs:
       - name: npm install
         run: npm install
 
-      - name: npm run build
-        run: npm run build
-
-      - name: npm run deploy
-        run: npm run deploy
+      - name: Build
+        run: |
+          npm run deploy
+          npm run deploy
