--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"gulp-group-css-media-queries": "^1.2.2",
 		"gulp-html-beautify": "^1.0.1",
 		"gulp-htmlmin": "^5.0.1",
+		"gulp-imagemin": "^8.0.0",
 		"gulp-minify": "^3.1.0",
 		"gulp-newer": "^1.4.0",
 		"gulp-notify": "^4.0.0",
@@ -44,8 +45,13 @@
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-uglify": "^3.0.2",
 		"gulp-uglify-es": "^3.0.0",
+		"gulp-webp": "^4.0.1",
+		"gulp-webp-html": "^1.0.2",
+		"gulp-webp-html-nosvg": "^1.1.1",
+		"gulp-webpcss": "^1.1.1",
 		"postcss": "^8.4.16",
-		"prettier": "2.7.1"
+		"prettier": "2.7.1",
+		"webp-converter": "^2.2.3"
 	},
 	"dependencies": {
 		"sass": "^1.54.8"
