--- a/package.json
+++ b/package.json
@@ -44,14 +44,12 @@
 		"gulp-sass": "^5.1.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-uglify": "^3.0.2",
-		"gulp-uglify-es": "^3.0.0",
 		"gulp-webp": "^4.0.1",
-		"gulp-webp-html": "^1.0.2",
 		"gulp-webp-html-nosvg": "^1.1.1",
 		"gulp-webpcss": "^1.1.1",
 		"postcss": "^8.4.16",
-		"prettier": "2.7.1",
-		"webp-converter": "^2.2.3"
+		"prettier": "^2.7.1",
+		"webp-converter": "2.2.3"
 	},
 	"dependencies": {
 		"sass": "^1.54.8"
