--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Start project.",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "gulp",
+		"start": "NODE_ENV=dev gulp",
 		"build": "gulp build",
 		"deploy": "gulp deploy"
 	},
@@ -25,6 +25,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"gulp": "^4.0.2",
+		"gulp-cache": "^1.1.3",
 		"gulp-cleancss": "^0.2.2",
 		"gulp-concat": "^2.6.1",
 		"gulp-css-url-adjuster": "^0.2.3",
@@ -52,6 +53,7 @@
 		"webp-converter": "2.2.3"
 	},
 	"dependencies": {
+		"cross-env": "^7.0.3",
 		"sass": "^1.54.8"
 	}
 }
