--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-html-nosvg": "^1.1.1",
 		"gulp-webpcss": "^1.1.1",
+		"markdown": "^0.5.0",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"webp-converter": "2.2.3"
